--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -5,7 +5,7 @@ html,
       }
 
       body {
-        background: #eee;
+        /* background: #eee; */
         font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
         font-size: 14px;
         color: #000;
