--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -3,7 +3,9 @@ html,
         position: relative;
         height: 100%;
       }
-
+      input{
+        outline: none;
+      }
       body {
         /* background: #eee; */
         font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
