--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -19,22 +19,50 @@ html,
         width: 100%;
         height: 100%;
       }
-
+      .swiper-active-slide{
+        width: 100%;
+      }
       .swiper-slide {
         font-size: 18px;
         background: #fff;
-
+        max-width: 100%;
         /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
+        display: block;
         align-items: center;
       }
 
-      .swiper-slide img {
+      .swiper-slide .card-img-handler {
         display: block;
-        width: 100%;
+        max-width: 100%;
         height: 100%;
+        margin-right: 12px;
         object-fit: cover;
+      }
+      .card-img-handler .img-handler{
+        display: block;
+        max-width: 100%;
+      }
+      .img-handler img{
+        min-width: 100%;
+        display: inline-block;
+        margin-right: 2rem;
+      }
+
+      .stroke-red{
+        -webkit-text-stroke-color: white;
+        -webkit-text-stroke-width: 1px;
+        text-shadow: 0.03em 0.03em 0 #ea110c;
+      }
+      .stroke-black{
+        -webkit-text-stroke-color: rgb(0, 0, 0);
+        -webkit-text-stroke-width: 1px;
+        text-shadow: 0.03em 0.03em 0 #ea110c;
+      }
+      .stroke-transparent{
+        -webkit-text-stroke-color: rgb(0, 0, 0);
+        -webkit-text-stroke-width: 1px;
+      }
+
+      @media only screen and (max-width: 960px){
+
       }
