--- a/pages/about/style.css
+++ b/pages/about/style.css
@@ -10,8 +10,17 @@
     -webkit-text-stroke-width: 1px;
     text-shadow: 0.03em 0.03em 0 #ea110c;
   }
+  
+  .stroke-black-none{
+    -webkit-text-stroke-color: rgb(0, 0, 0);
+    -webkit-text-stroke-width: 1px;
+  }
   .stroke-transparent{
     -webkit-text-stroke-color: rgb(0, 0, 0);
+    -webkit-text-stroke-width: 1px;
+  }
+  .stroke-white{
+    -webkit-text-stroke-color: rgb(255, 255, 255);
     -webkit-text-stroke-width: 1px;
   }
   .stroke-gray{
