--- a/pages/about/style.css
+++ b/pages/about/style.css
@@ -1,4 +1,31 @@
 /*  */
+.swiper {
+        width: 100%;
+        height: 100%;
+      }
+      .swiper-active-slide{
+        width: 100%;
+      }
+      .swiper-slide {
+        font-size: 18px;
+        background: #fff;
+        min-width: 360px;
+        /* Center slide text vertically */
+        display: block;
+        align-items: center;
+      }
+
+      .swiper-slide .card-img-handler {
+        display: block;
+        height: 100%;
+        margin-right: 12px;
+        object-fit: cover;
+      }
+      .team-card .img-handler{
+        display: block;
+        max-width: 100vh;
+      }
+
 
 .stroke-red{
     -webkit-text-stroke-color: white;
