--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -1,19 +1,4 @@
-html,
-      body {
-        position: relative;
-        height: 100%;
-      }
-      input{
-        outline: none;
-      }
-      body {
-        /* background: #eee; */
-        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-        font-size: 14px;
-        color: #000;
-        margin: 0;
-        padding: 0;
-      }
+
 
       .swiper {
         width: 100%;
@@ -30,6 +15,14 @@ html,
         display: block;
         align-items: center;
       }
+      .mySwiper2 .swiper-slide {
+        font-size: 18px;
+        background: #fff;
+        min-width: 300px;
+        /* Center slide text vertically */
+        display: block;
+        align-items: center;
+      }
 
       .swiper-slide .card-img-handler {
         display: block;
@@ -42,7 +35,6 @@ html,
         max-width: 100vh;
       }
      
-
       .stroke-red{
         -webkit-text-stroke-color: white;
         -webkit-text-stroke-width: 1px;
@@ -53,8 +45,17 @@ html,
         -webkit-text-stroke-width: 1px;
         text-shadow: 0.03em 0.03em 0 #ea110c;
       }
+      
+      .stroke-black-none{
+        -webkit-text-stroke-color: rgb(0, 0, 0);
+        -webkit-text-stroke-width: 1px;
+      }
       .stroke-transparent{
         -webkit-text-stroke-color: rgb(0, 0, 0);
+        -webkit-text-stroke-width: 1px;
+      }
+      .stroke-white{
+        -webkit-text-stroke-color: rgb(255, 255, 255);
         -webkit-text-stroke-width: 1px;
       }
       .stroke-gray{
@@ -62,7 +63,6 @@ html,
         -webkit-text-stroke-width: 1px;
         text-shadow: 0.03em 0.03em 0 #ccc;
       }
-
       @media only screen and (max-width: 960px){
         .mySwiper3 .swiper-slide{
           width: 40px;
