--- a/style.css
+++ b/style.css
@@ -23,7 +23,10 @@
         display: block;
         align-items: center;
       }
-
+      .custom{
+        position: relative;
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+      }
       .swiper-slide .card-img-handler {
         display: block;
         height: 100%;
